# stochastic-convergence-bidding

./: .envrc  .gitignore  README.md  REPORT.md  TODO.md  mypy.ini  pyproject.toml  results.txt  results_20250331_132730.txt  results_20250331_170839.txt  results_20250331_231125.txt  results_20250331_231334.txt  results_20250409_105704.txt  results_20250417_100601.txt  results_20250417_101245.txt  results_20250417_101922.txt  results_20250417_113203.txt  results_20250417_113414.txt  results_20250417_113626.txt  results_20250417_114648.txt  results_20250417_115708.txt  run_project.py  run_project_backup.py
data/: energy_market_samples.npz  gmm_samples_final.npz  hardcoded_gmm_samples.npz  new_gmm_samples.npz
results/: interim_results_20250417_135723.txt  price_points_analysis_20250417_133827.txt  price_points_analysis_20250417_134532.txt  price_points_analysis_20250417_135723.txt
stochastic_convergence_bidding/: __init__.py  bidding_model.py  bidding_model_backup.py  market_data.py  model_fitting.py  sample_data_generator.py  test.py  validate_gmm.py  visualize_gmm.py  visualize_hardcoded_gmm.py
stochastic_convergence_bidding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
