[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stochastic-convergence-bidding"
version = "0.1.0"
description = "Stochastic Convergence Bidding Optimization"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "pyomo>=6.4.0",
    "pulp>=2.6.0",
    "scikit-learn>=1.0.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.5.0",
    "ipykernel>=6.0.0",
    "xarray>=2023.1.0",
    "cvxpy>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "flake8>=4.0.0",
]

[tool.setuptools]
packages = ["stochastic_convergence_bidding"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true